Fixes loading button overlaping with checkbox

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -109,6 +109,9 @@
   .Button {
     padding: 10px 35px;
   }
+  .Button-loading {
+    padding: 10px 20px;
+  }
 }
 
 .LoginScreen-help {
